updated text to free range

--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <body>
 
 <hi>Deliciousness in every bite!</h1>
-<p>Eggs from chickens that are free range</p>
+<p>...Eggs from chickens that are free range</p>
 
 </body>
 </html>
